--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -27,7 +27,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/et_noteTitle"
+        android:id="@+id/tf_noteTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_note"
         android:layout_marginStart="10dp"
@@ -37,17 +37,18 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:id="@+id/et_noteTitle"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/et_noteContent"
+        android:id="@+id/tf_noteContent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_noteTitle"
+        app:layout_constraintTop_toBottomOf="@id/tf_noteTitle"
         app:layout_constraintBottom_toTopOf="@id/btn_save"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -55,7 +56,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:id="@+id/et_noteContent"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -63,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn_save"
-        app:layout_constraintTop_toBottomOf="@id/et_noteContent"
+        app:layout_constraintTop_toBottomOf="@id/tf_noteContent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
